--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,7 +11,7 @@ main {
       display: flex;
       flex-direction: row;
       & > article {
-         width: 100vw;
+         width: 1000px;
       }
    }
 }
