--- a/sass/style.css
+++ b/sass/style.css
@@ -23,6 +23,7 @@
 
 html {
   scroll-behavior: smooth;
+  scroll-snap-type: x proximity;
 }
 
 body {
@@ -37,14 +38,13 @@ header > div,
 main footer,
 aside > div,
 body > footer > div {
+  scroll-snap-align: center;
   height: 100vh;
   width: min(100vw, 133vh);
   margin: 0 auto;
   overflow-x: hidden;
   background-color: black;
   background-image: radial-gradient(200% 250% at center, rgba(0, 50, 50, 0.75), black 100%);
-  text-shadow: 0 0 5px #707070;
-  animation: textShadow 0.15s infinite;
 }
 section::before,
 header > div::before,
@@ -73,8 +73,8 @@ aside > div::after,
 body > footer > div::after {
   content: "";
   display: block;
-  width: min(100vw, 133vh);
   margin: 0 auto;
+  width: min(100vw, 133vh);
   height: 100px;
   background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 153, 0, 0.15) 50%, rgba(0, 0, 0, 0) 100%);
   position: absolute;
@@ -141,6 +141,8 @@ h4 {
   font-weight: normal;
   text-align: center;
   padding-top: 15px;
+  text-shadow: 0 0 5px #707070;
+  animation: textShadow 0.15s infinite;
 }
 
 ::selection {
@@ -252,6 +254,8 @@ p,
 a,
 li {
   font-size: var(--step-0);
+  text-shadow: 0 0 5px #707070;
+  animation: textShadow 0.15s infinite;
 }
 
 h1 {
@@ -272,8 +276,6 @@ h4 {
 
 a {
   color: #00ffc0;
-  text-shadow: 0 0 5px #707070;
-  animation: textShadow 0.15s infinite;
 }
 
 main footer a {
