--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,5 @@
 $monitor-height: 100vh;
-// $monitor-width: 100%;
 $monitor-width: min(100vw, $monitor-height * 1.33);
-// $monitor-margin: (100vw - $monitor-width) / 2;
 $monitor-content-padding: max(4%, 20px);
 $section-width: 100vw;
 $text-color: #009900;
@@ -35,7 +33,7 @@ $text-color: #009900;
 
 html {
 	scroll-behavior: smooth;
-	// scroll-snap-type: x mandatory;
+	scroll-snap-type: x proximity;
 }
 
 body {
@@ -50,7 +48,7 @@ header > div,
 main footer,
 aside > div,
 body > footer > div {
-	// scroll-snap-align: center;
+	scroll-snap-align: center;
 	height: $monitor-height;
 	width: $monitor-width;
 	margin: 0 auto;
@@ -62,9 +60,6 @@ body > footer > div {
 		rgba(0, 50, 50, 0.75),
 		black 100%
 	);
-
-	text-shadow: 0 0 5px #707070;
-	animation: textShadow 0.15s infinite;
 
 	// Make it cover the entire screen without being interactible.
 	&::before {
@@ -88,8 +83,8 @@ body > footer > div {
 		// Green scan bar.
 		content: "";
 		display: block;
-		width: $monitor-width;
 		margin: 0 auto;
+		width: $monitor-width;
 		height: 100px;
 		background: linear-gradient(
 			0deg,
@@ -137,6 +132,8 @@ h4 {
 	font-weight: normal;
 	text-align: center;
 	padding-top: 15px;
+	text-shadow: 0 0 5px #707070;
+	animation: textShadow 0.15s infinite;
 }
 
 ::selection {
@@ -275,6 +272,8 @@ p,
 a,
 li {
 	font-size: var(--step-0);
+	text-shadow: 0 0 5px #707070;
+	animation: textShadow 0.15s infinite;
 }
 
 h1 {
@@ -295,8 +294,6 @@ h4 {
 
 a {
 	color: #00ffc0;
-	text-shadow: 0 0 5px #707070;
-	animation: textShadow 0.15s infinite;
 }
 
 main footer a {
@@ -343,8 +340,3 @@ header {
 #contribute {
 	grid-template-columns: repeat(3, $section-width);
 }
-
-// Fix the extra space.
-// h1 {
-// 	margin-top: -96vh;
-// }
