--- a/sass/style.css
+++ b/sass/style.css
@@ -1,11 +1,4 @@
-@font-face {
-  font-family: "Eagle";
-  src: url("https://frindestown.duckdns.org/fonts/Web437_EagleSpCGA_Alt3.woff") format("woff");
-}
-@font-face {
-  font-family: "WebPlus";
-  src: url("https://frindestown.duckdns.org/fonts/WebPlus_IBM_VGA_8x16.woff") format("woff");
-}
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Silkscreen&display=swap");
 :root {
   --step--2: clamp(0.7813rem, 0.7747rem + 0.0326vw, 0.8rem);
   --step--1: clamp(0.9375rem, 0.9158rem + 0.1087vw, 1rem);
@@ -17,16 +10,22 @@
   --step-5: clamp(2.7994rem, 2.4461rem + 1.7663vw, 3.815rem);
 }
 
+html {
+  overflow-y: clip;
+}
+
 * {
   box-sizing: border-box;
 }
 
 html {
   scroll-behavior: smooth;
+  background-color: #101313;
+  scroll-snap-type: proximity;
 }
 
 body {
-  font-family: "WebPlus", Inconsolata, monospace;
+  font-family: 'Silkscreen', sans-serif;
   color: #009900;
   overflow-x: scroll;
   margin: 0;
@@ -41,6 +40,7 @@ header > div,
 main footer,
 aside > div,
 body > footer > div {
+  scroll-snap-align: center;
   height: 100vh;
   width: min(100vw, 133vh);
   margin: 0 auto;
@@ -147,7 +147,8 @@ h1,
 h2,
 h3,
 h4 {
-  font-family: "Eagle", Inconsolata, monospace;
+  font-family: "Press Start 2P", sans-serif;
+  color: #009900;
   font-weight: normal;
   text-align: center;
   padding-top: 15px;
@@ -265,19 +266,19 @@ li {
 }
 
 h1 {
-  font-size: var(--step-4);
-}
-
-h2 {
   font-size: var(--step-3);
 }
 
-h3 {
+h2 {
   font-size: var(--step-2);
 }
 
-h4 {
+h3 {
   font-size: var(--step-1);
+}
+
+h4 {
+  font-size: var(--step-0);
 }
 
 a {
