--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Silkscreen&display=swap');
 $monitor-height: 100vh;
 // $monitor-width: 100%;
 $monitor-width: min(100vw, $monitor-height * 1.33);
@@ -5,18 +6,6 @@ $monitor-width: min(100vw, $monitor-height * 1.33);
 $monitor-content-padding: max(4%, 20px);
 $section-width: 100vw;
 $text-color: #009900;
-
-@font-face {
-	font-family: "Eagle";
-	src: url("https://frindestown.duckdns.org/fonts/Web437_EagleSpCGA_Alt3.woff")
-		format("woff");
-}
-
-@font-face {
-	font-family: "WebPlus";
-	src: url("https://frindestown.duckdns.org/fonts/WebPlus_IBM_VGA_8x16.woff")
-		format("woff");
-}
 
 :root {
 	--step--2: clamp(0.7813rem, 0.7747rem + 0.0326vw, 0.8rem);
@@ -28,18 +17,22 @@ $text-color: #009900;
 	--step-4: clamp(2.3325rem, 2.0823rem + 1.2511vw, 3.0519rem);
 	--step-5: clamp(2.7994rem, 2.4461rem + 1.7663vw, 3.815rem);
 }
+html{
 
+	overflow-y: clip;
+}
 * {
 	box-sizing: border-box;
 }
 
 html {
 	scroll-behavior: smooth;
-	// scroll-snap-type: x mandatory;
+	background-color:#101313;
+	 scroll-snap-type: proximity;
 }
 
 body {
-	font-family: "WebPlus", Inconsolata, monospace;
+	font-family: '', sans-serif;
 	color: $text-color;
 	overflow-x: scroll;
 	margin: 0;
@@ -53,11 +46,12 @@ header > div,
 main footer,
 aside > div,
 body > footer > div {
-	// scroll-snap-align: center;
+	 scroll-snap-align: center;
 	height: $monitor-height;
 	width: $monitor-width;
 	margin: 0 auto;
 	overflow-x: hidden;
+
 	// Set base background color so see-through parts are just more black.
 	background-color: black;
 	background-image: radial-gradient(
@@ -138,7 +132,8 @@ h1,
 h2,
 h3,
 h4 {
-	font-family: "Eagle", Inconsolata, monospace;
+	font-family: 'Press Start 2P', sans-serif;
+	color: $text-color;
 	font-weight: normal;
 	text-align: center;
 	padding-top: 15px;
